--- a/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
+++ b/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
@@ -1,14 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Coypu" Version="3.1.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
+    <PackageReference Include="Coypu.NUnit" Version="3.0.1" />
+    <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="SpecFlow" Version="3.0.225" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.0.225" />
+    <PackageReference Include="Protractor" Version="0.12.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Support\" />
+    <Folder Include="Test\" />
+    <Folder Include="Drivers\" />
+    <Folder Include="Settings\" />
+    <Folder Include="Capabilities\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AcceptanceTests.Model\AcceptanceTests.Model.csproj" />
   </ItemGroup>
 </Project>
