--- a/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
+++ b/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Context\" />
     <Folder Include="User\" />
     <Folder Include="Type\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.9.0" />
   </ItemGroup>
 </Project>
