--- a/AcceptanceTests/AcceptanceTests.Configuration/AcceptanceTests.Configuration.csproj
+++ b/AcceptanceTests/AcceptanceTests.Configuration/AcceptanceTests.Configuration.csproj
@@ -2,18 +2,31 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>vh-acceptance-tests-configuration</PackageId>
+    <PackageVersion>1.0</PackageVersion>
+    <Authors>Andressa Dantas</Authors>
+    <Owners>Video Hearings</Owners>
+    <PackageProjectUrl>https://github.com/hmcts/vh-acceptance-tests</PackageProjectUrl>
+    <Summary>Configuration package for acceptance tests.</Summary>
+    <Title>VH Acceptance Tests Configuration</Title>
+    <Description>Configuration package for acceptance tests.</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SecurityConfiguration\" />
