--- a/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
+++ b/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>vh-acceptance-tests-model</PackageId>
+    <PackageVersion>1.0</PackageVersion>
+    <Authors>Andressa Dantas</Authors>
+    <Owners>Video Hearings</Owners>
+    <PackageProjectUrl>https://github.com/hmcts/vh-acceptance-tests</PackageProjectUrl>
+    <Summary>Model classes with types and POCOs for acceptance tests.</Summary>
+    <Title>VH Acceptance Tests Model</Title>
+    <Description>Model classes with types and POCOs for acceptance tests.</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,5 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
