--- a/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
+++ b/AcceptanceTests/AcceptanceTests.PageObject/AcceptanceTests.PageObject.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>vh-acceptance-tests-pageobject</PackageId>
+    <PackageVersion>1.0</PackageVersion>
+    <Authors>Andressa Dantas</Authors>
+    <Owners>Video Hearings</Owners>
+    <PackageProjectUrl>https://github.com/hmcts/vh-acceptance-tests</PackageProjectUrl>
+    <Summary>Page Object package with page abstractions for the SUTs front-end.</Summary>
+    <Title>VH Acceptance Tests Model</Title>
+    <Description>Page Object package with page abstractions for the SUTs front-end.</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,5 +26,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
