created yml file for pipeline. Removing feature.cs file from git ignore and checking in as there are issues generating these files at the moment

--- a/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
+++ b/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
@@ -45,11 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Features\SignIn.feature.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Features\AdminWebsite\SignIn.feature.cs">
-      <DependentUpon>SignIn.feature</DependentUpon>
-    </Compile>
+    <Compile Remove="Features\AdminWebsite\SignIn.feature.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AcceptanceTests.Model\AcceptanceTests.Model.csproj" />
@@ -67,7 +63,7 @@
     <Content Include="serviceweb.chrome.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="adminweb.firefox.desktop.runsettings.xml">
+    <Content Include="adminwebsite.firefox.desktop.runsettings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
