--- a/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
+++ b/AcceptanceTests/AcceptanceTests.Tests/AcceptanceTests.Tests.csproj
@@ -14,6 +14,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Features\AdminWebsite\SigningIn.feature">
+      <Generator></Generator>
+    </None>
     <None Update="useraccounts.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -24,8 +27,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Features\AdminWebsite\SignIn.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>SignIn.feature.cs</LastGenOutput>
+      <Generator></Generator>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -34,16 +36,15 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="78.0.3904.7000" />
     <PackageReference Include="SpecFlow" Version="3.0.225" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.0.225" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.225" />
     <PackageReference Include="SpecRun.Runner" Version="3.0.391" />
     <PackageReference Include="Coypu" Version="3.1.1" />
     <PackageReference Include="Coypu.NUnit" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Features\" />
     <Folder Include="Steps\" />
     <Folder Include="Hooks\" />
     <Folder Include="IntegrationTests\" />
-    <Folder Include="Features\AdminWebsite\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Features\SignIn.feature.cs" />
