Added debugging info on DriverExtension methods, Added page names to Model and Contact Us component to Page Objects.

--- a/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
+++ b/AcceptanceTests/AcceptanceTests.Model/AcceptanceTests.Model.csproj
@@ -17,6 +17,7 @@
     <Folder Include="Context\" />
     <Folder Include="User\" />
     <Folder Include="Type\" />
+    <Folder Include="Page\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
