Working version of Admin and Service Websites login test cases. Updated base URL to use sandbox, fixed issues with saucelabs browsers, build name and test name, added method to wait for page to load, added missing files for videoweb.

--- a/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
+++ b/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="78.0.3904.7000" />
     <PackageReference Include="Selenium.WebDriver.MicrosoftWebDriver" Version="10.0.17134" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.26.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Support\" />
