--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,37 +1,3 @@
-# Set variables once
-variables:
-  cleanChekout: 'false'
-  solutionType: dotNetCore # angularDotNetCore, dotNetCore
-  apiDirectory: 'AcceptanceTests'
-  sonarCloudPrepareExtraProperties: |
-    sonar.exclusions=**/node_modules/**,**/*.spec.ts,*.spec.ts,**/ClientApp/src/*,**/ClientApp/coverage/**/*
-    sonar.typescript.lcov.reportPaths=$(System.DefaultWorkingDirectory)/AdminWebsite/AdminWebsite/ClientApp/coverage/lcov.info
-    sonar.typescript.exclusions=**/node_modules/**,**/typings.d.ts,**/main.ts,**/environments/environment*.ts,**/*routing.module.ts,**/api-client.ts
-    sonar.cs.opencover.reportsPaths=$(Common.TestResultsDirectory)\Coverage\coverage.opencover.xml
-    sonar.coverage.exclusions=**/Testing.Common/**,AdminWebsite/Views/*,AdminWebsite/Pages/*,AdminWebsite.UserAPI.Client/*,AdminWebsite.AcceptanceTests/*
-  nodeVersion: 10.16.0
-  integrationTestsAppSettingsTransform: '
-  "AzureAd/Authority":"https://login.microsoftonline.com/$(TenantId)",
-  "AzureAd/ClientId":"$(vh-admin-web-appid)",
-  "AzureAd/ClientSecret":"$(vh-admin-web-key)",
-  "AzureAd:TenantId":"$(TenantId)",
-  "VhServices/BookingsApiResourceId":"$(vh-bookings-api-identifieruris)",
-  "VhServices/UserApiResourceId":"$(vh-user-api-identifieruris)"'
-
-  vhAzureKeyVault: 'https://vhwebsitepreview.vault.azure.net/' # Used during integration tests
-  keyVaultName: vhcoreinfrahtpreview # Used to get secrets for integration tests
-  secretsFilter: 'TenantId,vh-admin-web-appid,vh-admin-web-key,vh-bookings-api-identifieruris,vh-user-api-identifieruris' # filters out secrets returned from key vault
-  infraKeyVaultName: 'vhcoreinfradev'
-  infraSecretsFilter: 'vh-core-infra-AppInsightsKey'
-
-# GitHub Repo that conatins build templates. Reference https://docs.microsoft.com/en-us/azure/devops/pipelines/process/templates?view=vsts#using-other-repositories
-resources:
-  repositories:
-  - repository: azureDevOpsTemplates
-    type: github
-    name: hmcts/azure-devops-templates
-    endpoint: 'GitHubDevOps'
-
 trigger:
   branches:
     include:
@@ -42,16 +8,91 @@ trigger:
 pr:
   - '*'
 
-jobs:
-- template: jobs/angularDotNetCore.yml@azureDevOpsTemplates # Template reference
-  parameters:
-    cleanCheckout: $(cleanCheckout)
-    sonarCloudExtraProperties: $(sonarCloudPrepareExtraProperties)
-    KeyVaultName: $(KeyVaultName)
-    apiDirectory: $(apiDirectory)
-    SecretsFilter: $(SecretsFilter)
-    solutionType: $(solutionType)
-    integrationTestsAppSettingsTransform: $(integrationTestsAppSettingsTransform)
-    infraKeyVaultName: $(infraKeyVaultName)
-    infraSecretsFilter: $(infraSecretsFilter)
-    nodeVersion: $(nodeVersion)
+pool:
+  name: Azure-VSTS-VS2017
+  demands:
+  - DotNetFramework
+  - vstest
+
+variables:
+  - group: Saucelabs
+  - group: vh domains and urls
+  - group: vh test users
+  - name: subscription
+    value: 'Reform-CFT-VH-Dev'
+  - name: keyvault
+    value: 'vhcoreinfraht$(environment)'
+  - name: ReadKeyVaultSecrets
+    value: 'TenantId, vh-service-web-appid, vh-service-web-key'
+
+steps:
+- task: gittools.gitversion.gitversion-task.GitVersion@5
+  displayName: GitVersion
+
+- task: UseDotNet@2
+  displayName: 'Install latest dotnet'
+  inputs:
+    version: 2.x
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet restore'
+  inputs:
+    command: restore
+    projects: '**/*.csproj'
+    vstsFeed: '3f69a23d-fbc7-4541-afc7-4cccefcad773/e48b2732-376c-4052-ba97-b28783c9bab5'
+    verbosityRestore: Minimal
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet build'
+  inputs:
+    projects: '**/*.csproj'
+    arguments: '-o $(Build.ArtifactStagingDirectory)\ '
+
+- task: AzureKeyVault@1
+  displayName: 'Get Secrets'
+  inputs:
+    azureSubscription: '$(subscription)'
+    KeyVaultName: '$(keyvault)'
+    SecretsFilter: '$(ReadKeyVaultSecrets)'
+
+- task: sergeyzwezdin.magic-chunks.magic.chunks.MagicChunks@2
+  displayName: 'Config transform'
+  inputs:
+    sourcePath: '$(Build.ArtifactStagingDirectory)/appsettings.json'
+    fileType: Json
+    transformations: |
+     {
+       "AzureAd/Authority": "$(Authority)",
+       "AzureAd/ClientId": "$(ClientId)",
+       "AzureAd/ClientSecret": "$(ClientSecret)",
+       "AzureAd/RedirectUri": "$(current_web_url)",
+       "BaseVideoUrl": "$(video_blob_url)",
+       "Saucelabs/AccessKey": "$(Saucelabs:AccessKey)",
+       "Saucelabs/Username": "$(Saucelabs:Username)",
+       "TestUserSecrets/Individual": "$(TestUserSecrets:Individual)",
+       "TestUserSecrets/Password": "$(TestUserSecrets:Password)",
+       "TestUserSecrets/Person": "$(TestUserSecrets:Person)",
+       "TestUserSecrets/Representative": "$(TestUserSecrets:Representative)",
+       "TestUserSecrets/TestUserPassword": "$(TestUserSecrets:TestUserPassword)",
+       "TestUserSecrets/TestUsernameStem": "$(TestUserSecrets:TestUsernameStem)",
+       "VhServices/BookingsApiResourceId": "$(bookings_api_url)",
+       "VhServices/BookingsApiUrl": "$(bookings_api_url)",
+       "WebsiteUrl": "$(current_web_url)"
+     }
+
+- task: VSTest@2
+  displayName: 'VsTest - testAssemblies'
+  inputs:
+    searchFolder: '$(Build.ArtifactStagingDirectory)'
+    testFiltercriteria: 'TestCategory!=Local'
+    uiTests: true
+    overrideTestrunParameters: '-TargetApp ServiceWebsite -TargetBrowser Chrome -TargetPlatform Desktop'
+    runInParallel: true
+    codeCoverageEnabled: true
+    rerunFailedTests: false
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet push'
+  inputs:
+    command: push
+    publishVstsFeed: '3f69a23d-fbc7-4541-afc7-4cccefcad773/e48b2732-376c-4052-ba97-b28783c9bab5'
