--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,15 @@ steps:
     verbosityRestore: Minimal
 
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs:
+    command: publish
+    zipAfterPublish: false
+    modifyOutputPath: false
+    projects: '**/*.csproj'
+    arguments: '-o $(Build.ArtifactStagingDirectory)\ '
+
+- task: DotNetCoreCLI@2
   displayName: 'dotnet build'
   inputs:
     projects: '**/*.csproj'
