--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ steps:
     command: publish
     zipAfterPublish: false
     modifyOutputPath: false
+    publishWebProjects: false
     projects: '**/*.csproj'
     arguments: '-o $(Build.ArtifactStagingDirectory)\ '
 
