--- a/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
+++ b/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <PackOnBuild>true</PackOnBuild>
-    <PackageId>vh-acceptance-tests-driver</PackageId>
+    <PackageId>VH.AcceptanceTests.Driver</PackageId>
     <PackageVersion>1.0</PackageVersion>
     <Authors>Andressa Dantas</Authors>
     <Owners>Video Hearings</Owners>
     <PackageProjectUrl>https://github.com/hmcts/vh-acceptance-tests</PackageProjectUrl>
     <Title>VH Acceptance Tests Driver</Title>
     <Description>Selenium Webdriver package for VH Acceptance Tests.</Description>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +24,6 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="SpecFlow" Version="3.0.225" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.0.225" />
-    <PackageReference Include="Protractor" Version="0.12.0" />
     <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -32,6 +32,8 @@
     <PackageReference Include="Selenium.WebDriver.MicrosoftWebDriver" Version="10.0.17134" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.26.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="Protractor.Net.Standard" Version="0.12.0" />
+    <PackageReference Include="VH.AcceptanceTests.Model" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Support\" />
@@ -39,8 +41,5 @@
     <Folder Include="Drivers\" />
     <Folder Include="Settings\" />
     <Folder Include="Capabilities\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AcceptanceTests.Model\AcceptanceTests.Model.csproj" />
   </ItemGroup>
 </Project>
