--- a/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
+++ b/AcceptanceTests/AcceptanceTests.Driver/AcceptanceTests.Driver.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="Selenium.WebDriver.MicrosoftWebDriver" Version="10.0.17134" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.26.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
-    <PackageReference Include="Protractor.Net.Standard" Version="0.12.1" />
+    <PackageReference Include="Protractor.Net.Standard.Latest.Selenium" Version="0.12.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Support\" />
