Update azure-pipelines.yml for Azure Pipelines
appended *Test* to filter to fix issue with build error https://github.com/dotnet/core-setup/issues/6189

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,7 +103,7 @@ steps:
 - task: VSTest@2
   displayName: 'VsTest - testAssemblies'
   inputs:
-    testAssemblyVer2: 'AcceptanceTests.*.dll'
+    testAssemblyVer2: 'AcceptanceTests.*Test*.dll'
     searchFolder: '$(Build.ArtifactStagingDirectory)'
     testFiltercriteria: 'TestCategory!=Local'
     uiTests: true
